19461
This one got by Paul's pet monkey:
{code}
Welcome to Scala version 2.11.4 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_11).
Type in expressions to have them evaluated.
Type :help for more information.

scala> .1
<console>:1: error: ';' expected but double literal found.
       $intp.1
            ^
{code}
